WIKI-789 change word-wrap of title div to normal to avoid bad UI, hide title div when right panel is too small to make redundant blank dissapeared

--- a/wiki-webapp/src/main/webapp/skin/less/wiki-mixins.less
+++ b/wiki-webapp/src/main/webapp/skin/less/wiki-mixins.less
@@ -46,7 +46,7 @@
 			font-weight: bold;
 			color: @linkColor;
 			line-height: 30px;
-			word-wrap: break-word;
+			word-wrap: normal;
 		}
 	}
 }
